--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 :root {
     --bg-grey: #eceef1;
+    --font-grey: #606060;
+    --light-grey: #909090;
     --blue: #0077c5;
     --black: #404040;
   }
@@ -9,7 +11,7 @@
 }
 
 body {
-    background-color: grey;
+    background-color: var(--bg-grey);
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -18,7 +20,8 @@ body {
 }
 
 header {
-    background-color: aqua;
+    /* background-color: aqua; */
+    background-color: var(--bg-grey);
     display: flex;
     justify-content: flex-end;
 }
@@ -28,6 +31,18 @@ header {
     right: 0;
     display: flex;
     font-size: 0.8rem;
+    display: flex;
+    align-items: center;
+}
+
+.forgotID-link {
+    color: var(--blue);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.forgotID-link:hover {
+    text-decoration: underline;
 }
 
 .signin-btn {
@@ -38,9 +53,8 @@ header {
     border-radius: 0.25em;
     padding: 0.5em 1em;
     display: flex;
-    /* justify-content: center; */
-    /* align-content: center; */
     align-items: center;
+    cursor: pointer;
 }
 
 .lock-img {
@@ -53,7 +67,6 @@ header {
 main {
     background-color: var(--bg-grey);
     height: 100%;
-    padding: 0 13em;
 }
 
 .logos {
@@ -96,25 +109,173 @@ main {
 
 
 
-
-
-
 /* FORM */
 
 .form {
     border: 1px solid black;
+    /* background-color: rgb(138, 137, 192); */
     background-color: white;
     height: 80%;
+    padding: 1em 1em 0 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 22em;
+    margin: auto;
 
+}
 
+.form-header {
+    /* background-color: hotpink; */
+    text-align: center;
+    margin-top: 1em;
+    margin-bottom: -3em;
+}
+
+.form-header h1{
+    font-size: 1.5rem;
+    margin-bottom: 0.75em;
+}
+
+.form-header p {
+    font-size: 0.9rem;
+    color: var(--light-grey);
+
+    /* font-weight: 100; */
+}
+
+.form-header span {
+    color: var(--blue);
+    cursor: pointer;
+}
+
+.form-header span:hover {
+    text-decoration: underline;
+}
+
+.form-main {
+    font-size: 0.9rem;
+
+}
+
+.form-main span{
+    color: var(--font-grey);
+}
+
+.form-main label {
+    display: block;
+    margin-bottom: 0.75em;
+    margin-top: 2em;
+}
+
+.form-main input {
+    width: 98.7%;
+    height: 2.5em;
+    border-radius: 0.25em;
+    border: 1px solid var(--light-grey);
+}
+
+.form li {
+    /* margin-bottom: ; */
+}
+
+.phone-smallprint {
+    margin-top: 0.35em;
+    font-size: 0.7rem;
+}
+
+.password-input {
+
+}
+
+.unlock-img {
+    float: right;
+    margin-right: 0.5em;
+    margin-top: -2.2em;
+    position: relative;
+}
+
+.password-container {
+    /* position:relative; */
+    /* background:rgb(165, 144, 144); */
+}
+
+.submit-btn {
+    background-color: var(--blue);
+    border: none;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.75em 0 0.75em;
+    width: 100%;
+    cursor: pointer;
+    border-radius: 0.25em;
+    margin-top: 3em;
+
+}
+
+.submit-btn img {
+    margin-right: 0.5em;
+}
+
+.form-info {
+    /* background-color: lavender; */
+    color: var(--light-grey);
+    text-align: center;
+    font-size: 0.8rem;
+    font-style: italic;
+    line-height: 1.2;
+    margin-top: -2em;
+}
+
+.form-info span{
+    color: var(--blue);
+    cursor: pointer;
+}
+
+.form-info span:hover{
+    text-decoration: underline;
+}
+
+.form-footer {
+    background-color: var(--bg-grey);
+    margin-left: -1.4em;
+    margin-right: -1.4em;
+    height: 5em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.7rem;
+}
+
+.form-footer span {
+    color: var(--blue);
+    cursor: pointer;
+}
+
+.form-footer span:hover {
+    text-decoration: underline;
 }
 
 
 /* FOOTER */
 
 footer {
-    background-color: palevioletred;
-    height: 4em;
+    /* background-color: palevioletred; */
+    background-color: var(--bg-grey);
+    height: 10em;
     text-align: center;
-    
+    margin-top: 1em;
+    line-height: 1.3;
+    font-size: 0.8rem;
+}
+
+footer span {
+    cursor: pointer;
+    margin: 1em;
+}
+
+footer span:hover {
+    text-decoration: underline;
 }
