--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     --bg-grey: #eceef1;
     --font-grey: #606060;
     --light-grey: #909090;
+    --lighter-grey: #d6d3d3;
     --blue: #0077c5;
     --black: #404040;
   }
@@ -20,7 +21,6 @@ body {
 }
 
 header {
-    /* background-color: aqua; */
     background-color: var(--bg-grey);
     display: flex;
     justify-content: flex-end;
@@ -33,6 +33,7 @@ header {
     font-size: 0.8rem;
     display: flex;
     align-items: center;
+    line-height: 1.4;
 }
 
 .forgotID-link {
@@ -47,6 +48,7 @@ header {
 
 .signin-btn {
     margin-left: 0.5em;
+    margin-right: 1em;
     color: white;
     background-color: var(--blue);
     border: 1px solid black;
@@ -70,7 +72,6 @@ main {
 }
 
 .logos {
-    /* background-color: rgb(255, 0, 0); */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -83,7 +84,6 @@ main {
     background-size: 562px 83px;
     width: 118px;
     height: 35px;
-    /* margin: 0 auto; */
 }
 
 .logo-btn {
@@ -95,25 +95,20 @@ main {
 
 .logo-img {
     width: 25px;;
-
 }
 
 .logo-txt {
     margin-bottom: 0.25em;
-
 }
 
 .logos-footer {
     display: flex;
 }
 
-
-
 /* FORM */
 
 .form {
-    border: 1px solid black;
-    /* background-color: rgb(138, 137, 192); */
+    border: 1px solid var(--lighter-grey);
     background-color: white;
     height: 80%;
     padding: 1em 1em 0 1em;
@@ -122,11 +117,9 @@ main {
     justify-content: space-between;
     width: 22em;
     margin: auto;
-
 }
 
 .form-header {
-    /* background-color: hotpink; */
     text-align: center;
     margin-top: 1em;
     margin-bottom: -3em;
@@ -140,8 +133,6 @@ main {
 .form-header p {
     font-size: 0.9rem;
     color: var(--light-grey);
-
-    /* font-weight: 100; */
 }
 
 .form-header span {
@@ -155,11 +146,10 @@ main {
 
 .form-main {
     font-size: 0.9rem;
-
 }
 
 .form-main span{
-    color: var(--font-grey);
+    color: var(--light-grey);
 }
 
 .form-main label {
@@ -172,11 +162,7 @@ main {
     width: 98.7%;
     height: 2.5em;
     border-radius: 0.25em;
-    border: 1px solid var(--light-grey);
-}
-
-.form li {
-    /* margin-bottom: ; */
+    border: 1px solid var(--lighter-grey);
 }
 
 .phone-smallprint {
@@ -184,20 +170,11 @@ main {
     font-size: 0.7rem;
 }
 
-.password-input {
-
-}
-
 .unlock-img {
     float: right;
     margin-right: 0.5em;
     margin-top: -2.2em;
     position: relative;
-}
-
-.password-container {
-    /* position:relative; */
-    /* background:rgb(165, 144, 144); */
 }
 
 .submit-btn {
@@ -212,7 +189,6 @@ main {
     cursor: pointer;
     border-radius: 0.25em;
     margin-top: 3em;
-
 }
 
 .submit-btn img {
@@ -220,7 +196,6 @@ main {
 }
 
 .form-info {
-    /* background-color: lavender; */
     color: var(--light-grey);
     text-align: center;
     font-size: 0.8rem;
@@ -247,6 +222,7 @@ main {
     align-items: center;
     justify-content: center;
     font-size: 0.7rem;
+    color: var(--light-grey);
 }
 
 .form-footer span {
@@ -262,7 +238,6 @@ main {
 /* FOOTER */
 
 footer {
-    /* background-color: palevioletred; */
     background-color: var(--bg-grey);
     height: 10em;
     text-align: center;
